Bootstrapping form component

--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -13,13 +13,14 @@
       <h1 class="header__title">Travel App</h1>
     </header>
     <main class="column">
-      <form name="text-entry" autocomplete="off" class="section">
+      <!-- <form name="text-entry" autocomplete="off" class="section">
         <div class="column">
           <label class="color-primary" for="feelings">Enter text to analyze</label>
           <textarea class="shadow" name="text" id="text" placeholder="Write the text to analyze" rows="5" cols="30" required></textarea>
         </div>
         <button id="analyze-btn" type="submit" class="section__button bg-primary shadow">Analyze</button>
-      </form>
+      </form> -->
+      <trip-form></trip-form>
       <div id="loader" class="loader can-hide hidden"></div>
       <section class="section can-hide hidden" id="analysis-container">
         <ul class="list">
