--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -20,7 +20,7 @@
         </div>
         <button id="analyze-btn" type="submit" class="section__button bg-primary shadow">Analyze</button>
       </form> -->
-      <trip-form></trip-form>
+      <trip-form id="trip-form"></trip-form>
       <div id="loader" class="loader can-hide hidden"></div>
       <section class="section can-hide hidden" id="analysis-container">
         <ul class="list">
