--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -13,12 +13,16 @@
       <h1 class="header__title">Travel App</h1>
     </header>
     <main class="column">
+    <section class="section" id="card-container">
+    </section>
+
       
       <trip-form id="trip-form"></trip-form>
       <div id="loader" class="loader can-hide hidden"></div>
       <section class="section">
         <trip-list id="trip-list"></trip-list>
       </section>
+      
     </main>
     <!-- <script>
       // Check that service workers are supported
