--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -13,8 +13,9 @@
       <h1 class="header__title">Travel App</h1>
       <nav>
         <a href="#home">Home</a>
+        <a id="detail-anchor" href="#detail" class="can-hide-absent hidden">Details</a>
         <a href="#add">Add</a>
-        <a href="#add">Back</a>
+        <a href="#back">Back</a>
       </nav>
       </nav>
     </header>
@@ -50,18 +51,31 @@
         </div>
         <trip-form id="trip-form"></trip-form>
         <div id="loader" class="loader can-hide-present hidden"></div>
-        <div id="add-success" class="bg-success can-hide-present hidden alert">
-          <a>
+        <div id="add-success" class="bg-success can-hide-absent hidden alert">
+          <a href="#detail">
             New trip created! Click to see it
           </a>
         </div>
+        <div id="add-error" class="bg-danger can-hide-absent hidden alert">
+          <p >
+            Something went wrong! Make sure to add a real destination and sensible dates
+          </p>
+        </div>
       </section>
-      <section class="can-hide-absent hidden" id="detail">
-      </section>
-      <div class="section can-hide-absent hidden">
-        <trip-list id="trip-list"></trip-list>
-      </div>
-      
+      <section class="can-hide-absent hidden" id="detail-page">
+        <div id="detail-title" class="bg-primary alert can-hide-absent">
+          <p>
+            Selected trip
+          </p> 
+        </div>
+        <trip-card id="detail-card" class="can-hide-absent"></trip-card>
+        <trip-list id="weather-list" class="can-hide-absent"></trip-list>
+        <div id="detail-deleted" class="can-hide-present hidden alert bg-danger">
+          <a href="#home">
+            You deleted this trip! Go back to the home page
+          </a>
+        </div>
+      </section>      
     </main>
     <!-- <script>
       // Check that service workers are supported
