--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>UFEND-5 Travel App</title>
-    <meta name="description" content="UFEND-3 project">
+    <meta name="description" content="UFEND-5 project">
     <meta name="keywords" content="travelling">
     <meta name="author" content="Francesco Bellini">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -77,7 +77,7 @@
         </div>
       </section>      
     </main>
-    <!-- <script>
+    <script>
       // Check that service workers are supported
       if ('serviceWorker' in navigator) {
         // Use the window load event to keep the page load performant
@@ -85,6 +85,6 @@
           navigator.serviceWorker.register('/service-worker.js');
         });
       }
-      </script> -->
+      </script>
   </body>
 </html>
