--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -19,8 +19,8 @@
       </nav>
       </nav>
     </header>
-    <main class="column">
-      <section class="can-hide-absent hidden" id="home-page">
+    <main class="page">
+      <section class="can-hide-absent hidden page" id="home-page">
         <div id="empty-container" class="column can-hide-absent">
           <div class="alert">
             <p>
@@ -62,7 +62,7 @@
           </p>
         </div>
       </section>
-      <section class="can-hide-absent hidden" id="detail-page">
+      <section class="can-hide-absent hidden page" id="detail-page">
         <div id="detail-title" class="bg-primary alert can-hide-absent">
           <p>
             Selected trip
@@ -77,7 +77,7 @@
         </div>
       </section>      
     </main>
-    <script>
+    <!-- <script>
       // Check that service workers are supported
       if ('serviceWorker' in navigator) {
         // Use the window load event to keep the page load performant
@@ -85,6 +85,6 @@
           navigator.serviceWorker.register('/service-worker.js');
         });
       }
-      </script>
+      </script> -->
   </body>
 </html>
