Complete detail page, refactor components.module and main

--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -22,20 +22,7 @@
     <main class="page">
       <home-page id="home-page"></home-page>
       <add-page id="add-page"></add-page>
-      <section class="can-hide-absent hidden page" id="detail-page">
-        <div id="detail-title" class="bg-primary alert can-hide-absent">
-          <p>
-            Selected trip
-          </p>
-        </div>
-        <trip-card id="detail-card" class="can-hide-absent"></trip-card>
-        <trip-list id="weather-list" class="can-hide-absent"></trip-list>
-        <div id="detail-deleted" class="can-hide-present hidden alert bg-danger">
-          <a href="#home">
-            You deleted this trip! Go back to the home page
-          </a>
-        </div>
-      </section>
+      <detail-page id="detail-page"></detail-page>
     </main>
     <!-- <script>
       // Check that service workers are supported
