Update components registration and index

--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -19,6 +19,7 @@
       </nav>
       </nav>
     </header>
+    <toast-component></toast-component>
     <main class="page">
       <home-page id="home-page"></home-page>
       <add-page id="add-page"></add-page>
