Boostrap router, add detail logic, refactor

--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -14,7 +14,7 @@
       <nav>
         <a href="#home">Home</a>
         <a id="detail-anchor" href="#detail" class="can-hide-absent hidden">Details</a>
-        <a href="#add">Add</a>
+        <a href="#add/main">Add</a>
         <a href="#back">Back</a>
       </nav>
       </nav>
@@ -22,7 +22,8 @@
     <toast-component></toast-component>
     <main class="page">
       <home-page id="home-page"></home-page>
-      <add-page id="add-page"></add-page>
+      <add-page-main id="add-page-main"></add-page-main>
+      <add-page-details id="add-page-details"></add-page-details>
       <detail-page id="detail-page"></detail-page>
     </main>
     <!-- <script>
