--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -14,7 +14,7 @@
       <nav>
         <a href="#home">Home</a>
         <a id="detail-anchor" href="#detail" class="can-hide-absent hidden">Details</a>
-        <a href="#add/main">Add</a>
+        <a href="#add">Add</a>
         <a href="#back">Back</a>
       </nav>
       </nav>
