Refactor, add edit route

--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -23,8 +23,8 @@
     <main class="page">
       <home-page id="home-page"></home-page>
       <add-page-main id="add-page-main"></add-page-main>
-      <add-page-details id="add-page-details"></add-page-details>
       <detail-page id="detail-page"></detail-page>
+      <edit-page id="edit-page"></edit-page>
     </main>
     <!-- <script>
       // Check that service workers are supported
