Implement service and router for managing header highlight at navigation

--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -6,16 +6,16 @@
     <meta name="description" content="UFEND-5 project">
     <meta name="keywords" content="travelling">
     <meta name="author" content="Francesco Bellini">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <header class="header shadow bg-primary">
-      <h1 class="header__title">Travel App</h1>
       <nav>
-        <a href="#home">Home</a>
-        <a id="detail-anchor" href="#detail" class="can-hide-absent hidden">Details</a>
-        <a href="#add">Add</a>
-        <a href="#back">Back</a>
+        <a class="header__anchor header__anchor--back" href="#back">&#8592;</a>
+      </nav>
+      <nav>
+        <a class="header__anchor" href="#">Trips</a>
+        <a class="header__anchor" href="#add">Add</a>
       </nav>
       </nav>
     </header>
