Implement dialog component

--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <title>UFEND-5 Travel App</title>
@@ -20,6 +20,7 @@
       </nav>
     </header>
     <toast-component></toast-component>
+    <dialog-component></dialog-component>
     <main class="page">
       <home-page id="home-page"></home-page>
       <add-page-main id="add-page-main"></add-page-main>
