--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -27,7 +27,7 @@
       <detail-page id="detail-page"></detail-page>
       <edit-page id="edit-page"></edit-page>
     </main>
-    <!-- <script>
+    <script>
       // Check that service workers are supported
       if ('serviceWorker' in navigator) {
         // Use the window load event to keep the page load performant
@@ -35,6 +35,6 @@
           navigator.serviceWorker.register('/service-worker.js');
         });
       }
-      </script> -->
+      </script>
   </body>
 </html>
